--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
 }
 
 /*-----MAIN-----*/
-.hero {
+.heros {
     color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
@@ -54,21 +54,21 @@
 
 }
 
-.hero h1 {
+.heros h1 {
     font-size: 60px;
     font-weight: bold;
 }
 
-.hero p {
+.heros p {
     font-size: 30px;
     text-align: center;
 }
 
-.hero a {
+.heros a {
     text-decoration: none;
 }
 
-.hero a:hover {
+.heros a:hover {
     background-color:#8a7b7b;
     color: rgba(0, 0, 0, 0.425);
     border-radius: 10px;
