--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 /*-----HEADER-----*/
-.header {
+/*.header {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,7 +35,7 @@
     font-weight: 800;
     color:rgb(255, 255, 255);
     text-shadow: 2px 2px 2px #000000;
-}
+}*/
 
 /*-----MAIN-----*/
 .heros {
@@ -66,12 +66,18 @@
 
 .heros a {
     text-decoration: none;
+    color: rgb(0, 0, 0);
+    background-color: rgb(110, 107, 107);
+    font-size: 20px;
+    padding: 8px;
+    border-radius: 10px;
 }
 
 .heros a:hover {
-    background-color:#8a7b7b;
+    background-color:#e0d8d8;
     color: rgba(0, 0, 0, 0.425);
     border-radius: 10px;
+    padding: 8px;
 }
 
 
@@ -223,7 +229,6 @@
     width: 200px;
     height: 200px;
     border-radius: 60px;
-    box-shadow: -9px 15px 52px 19px rgba(192, 146, 146, 0.37);
 }
 
 .productos_two {
